--- a/index.qmd
+++ b/index.qmd
@@ -22,11 +22,11 @@ format:
   # message: false
   # echo: false
 # bibliography: references.bib
-# lightbox: # https://quarto.org/docs/output-formats/html-lightbox-figures.html
-#   match: auto
-#   effect: fade
-#   desc-position: right
-# dpi: 500
+lightbox: # https://quarto.org/docs/output-formats/html-lightbox-figures.html
+  match: auto
+  effect: fade
+  desc-position: right
+dpi: 500
 ---
 
 # Welcome to the fantastic world of Parquet
